add max value to the percentage inputs

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                          <div class="col-2">
                             <h5>Percentage %</h5>
                             <p>
-                            <input id="percentage1" type="number" step="1" onkeyup="calc('percentage1','risk1','pip1','entry1','lots1'),showResults()"> 
+                            <input id="percentage1" type="number" step="1" max="100" onkeyup="calc('percentage1','risk1','pip1','entry1','lots1'),showResults()"> 
                             </p>  
                             <p>
-                            <input id="percentage2" type="number" step="1" onkeyup="calc('percentage2','risk2','pip2','entry2','lots2'),showResults()"> 
+                            <input id="percentage2" type="number" step="1" max="100"  onkeyup="calc('percentage2','risk2','pip2','entry2','lots2'),showResults()"> 
                             </p> 
                             <p>
-                            <input id="percentage3"  type="number" step="1" onkeyup="calc('percentage3','risk3','pip3','entry3','lots3'),showResults()"> 
+                            <input id="percentage3"  type="number" step="1" max="100" onkeyup="calc('percentage3','risk3','pip3','entry3','lots3'),showResults()"> 
                             </p>
                             <br>
                             <p>
