add max value to the inputs

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </p>
                             <br>
                             <p>
-                                <input id="totalPercent" type="number" step="1"> 
+                                <input id="totalPercent" max="100" type="number" step="1"> 
                             </p>
                         </div>
                         <div class="col-2">
